--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,10 @@ on:
 
 jobs:
   lint:
+    name: Lint Charts
     runs-on: ubuntu-latest
+    outputs:
+      charts-changed: ${{ steps.list-changed.outputs.changed }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,18 +31,50 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.6.1
 
-      - name: Run chart-testing (list-changed)
+      - name: List changed charts
+        id: list-changed
         run: |
           changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
           if [[ -n "$changed" ]]; then
             echo "changed=true" >> "$GITHUB_OUTPUT"
+            echo "Charts changed:"
+            echo "$changed"
+          else
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            echo "No charts changed"
           fi
 
-      - name: Run chart-testing (lint)
+      - name: Lint charts
+        if: steps.list-changed.outputs.changed == 'true'
         run: ct lint --target-branch ${{ github.event.repository.default_branch }}
+
+  test:
+    name: Test Charts
+    runs-on: ubuntu-latest
+    needs: lint
+    if: needs.lint.outputs.charts-changed == 'true'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v4
+        with:
+          version: v3.14.0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          check-latest: true
+
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.6.1
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.12.0
 
-      - name: Run chart-testing (install)
+      - name: Install charts
         run: ct install --target-branch ${{ github.event.repository.default_branch }}
