feat: Add validation to ensure basic authentication username and password are provided when enabled.

--- a/charts/flower/templates/secret.yaml
+++ b/charts/flower/templates/secret.yaml
@@ -1,4 +1,7 @@
 {{- if and .Values.flower.basicAuth.enabled (not .Values.flower.basicAuth.existingSecret) -}}
+{{- if or (not .Values.flower.basicAuth.username) (not .Values.flower.basicAuth.password) }}
+{{- fail "When flower.basicAuth.enabled is true and flower.basicAuth.existingSecret is not set, both flower.basicAuth.username and flower.basicAuth.password must be provided" }}
+{{- end }}
 apiVersion: v1
 kind: Secret
 metadata:
