feat: Allow multi-line and templated configuration data in the configMap and add an example to values.yaml.

--- a/charts/flower/values.yaml
+++ b/charts/flower/values.yaml
@@ -179,9 +179,14 @@ persistence:
 configMap:
   enabled: false
   # Additional configuration files to mount
+  # Data must be string key-value pairs
   data: {}
-  # flowerconfig.py: |
-  #   # Custom Flower configuration
+  # Example:
+  # data:
+  #   flowerconfig.py: |
+  #     # Custom Flower configuration
+  #     # This is a Python configuration file
+  #     broker_api = 'http://localhost:5555/api/'
 
 # Additional volumes
 extraVolumes: []
