--- a/charts/flower/templates/configmap.yaml
+++ b/charts/flower/templates/configmap.yaml
@@ -6,5 +6,8 @@ metadata:
   labels:
     {{- include "flower.labels" . | nindent 4 }}
 data:
-  {{- toYaml .Values.configMap.data | nindent 2 }}
+{{- range $key, $value := .Values.configMap.data }}
+  {{ $key }}: |
+{{ tpl $value $ | nindent 4 }}
+{{- end }}
 {{- end }}
