--- a/charts/flower/templates/deployment.yaml
+++ b/charts/flower/templates/deployment.yaml
@@ -1,4 +1,5 @@
 {{- include "flower.validateBasicAuth" . -}}
+{{- include "flower.validatePersistence" . -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
