fix: Prevent FLOWER_PORT parsing errors in deployment by explicitly setting the environment variable and update chart version.

--- a/charts/flower/templates/deployment.yaml
+++ b/charts/flower/templates/deployment.yaml
@@ -64,6 +64,11 @@ spec:
               containerPort: {{ .Values.flower.port }}
               protocol: TCP
           env:
+            # Override Kubernetes-injected FLOWER_PORT service variable
+            # which would otherwise contain 'tcp://IP:PORT' and cause a ValueError
+            # when Flower tries to parse it as an integer
+            - name: FLOWER_PORT
+              value: {{ .Values.flower.port | quote }}
             - name: CELERY_BROKER_URL
               {{- if .Values.celery.brokerUrlSecretName }}
               valueFrom:
