--- a/charts/redis/templates/statefulset-sentinel.yaml
+++ b/charts/redis/templates/statefulset-sentinel.yaml
@@ -82,26 +82,32 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+          {{- if .Values.sentinel.livenessProbe.enabled }}
           livenessProbe:
             exec:
               command:
                 - sh
                 - -c
                 - redis-cli -p {{ .Values.sentinel.port }} ping
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 5
+            initialDelaySeconds: {{ .Values.sentinel.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.sentinel.livenessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.sentinel.livenessProbe.timeoutSeconds }}
+            failureThreshold: {{ .Values.sentinel.livenessProbe.failureThreshold }}
+            successThreshold: {{ .Values.sentinel.livenessProbe.successThreshold }}
+          {{- end }}
+          {{- if .Values.sentinel.readinessProbe.enabled }}
           readinessProbe:
             exec:
               command:
                 - sh
                 - -c
                 - redis-cli -p {{ .Values.sentinel.port }} ping
-            initialDelaySeconds: 10
-            periodSeconds: 5
-            timeoutSeconds: 3
-            failureThreshold: 3
+            initialDelaySeconds: {{ .Values.sentinel.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.sentinel.readinessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.sentinel.readinessProbe.timeoutSeconds }}
+            failureThreshold: {{ .Values.sentinel.readinessProbe.failureThreshold }}
+            successThreshold: {{ .Values.sentinel.readinessProbe.successThreshold }}
+          {{- end }}
           resources:
             {{- toYaml .Values.sentinel.resources | nindent 12 }}
           volumeMounts:
