--- a/charts/redis/values.yaml
+++ b/charts/redis/values.yaml
@@ -130,6 +130,24 @@ sentinel:
   config: |
     # Additional sentinel configuration
 
+  # Liveness probe configuration for Sentinel
+  livenessProbe:
+    enabled: true
+    initialDelaySeconds: 30
+    periodSeconds: 10
+    timeoutSeconds: 5
+    failureThreshold: 5
+    successThreshold: 1
+
+  # Readiness probe configuration for Sentinel
+  readinessProbe:
+    enabled: true
+    initialDelaySeconds: 10
+    periodSeconds: 5
+    timeoutSeconds: 3
+    failureThreshold: 3
+    successThreshold: 1
+
   # Resource limits for Sentinel
   resources:
     limits:
