feat: Ensure Redis password stability across Helm upgrades by adding `helm.sh/resource-policy: keep` to the secret and documenting the new behavior.

--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "redis.password" . }}
+  name: {{ include "redis.fullname" . }}-auth
   labels:
     {{- include "redis.labels" . | nindent 4 }}
+  annotations:
+    # Prevent Helm from deleting this secret on upgrade
+    # This ensures the password remains stable across upgrades
+    "helm.sh/resource-policy": keep
 type: Opaque
 data:
-  {{- if .Values.auth.password }}
-  {{ .Values.auth.passwordKey }}: {{ .Values.auth.password | b64enc | quote }}
-  {{- else }}
-  {{ .Values.auth.passwordKey }}: {{ randAlphaNum 32 | b64enc | quote }}
-  {{- end }}
+  {{ .Values.auth.passwordKey }}: {{ .Values.auth.password | default (randAlphaNum 16) | b64enc | quote }}
 {{- end }}
