--- a/charts/redis/templates/statefulset-sentinel.yaml
+++ b/charts/redis/templates/statefulset-sentinel.yaml
@@ -33,6 +33,8 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       initContainers:
         - name: init-sentinel
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
           image: {{ include "redis.image" . }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
