--- a/charts/redis/ci/standalone-values.yaml
+++ b/charts/redis/ci/standalone-values.yaml
@@ -1,10 +1,6 @@
 # CI test values for HA mode
-architecture: sentinel
-replicaCount: 3
-sentinel:
-  enabled: true
-  replicaCount: 3
-  quorum: 2
+architecture: standalone
+replicaCount: 1
 auth:
   enabled: true
   password: "test-password"
