--- a/charts/redis/values.yaml
+++ b/charts/redis/values.yaml
@@ -65,6 +65,21 @@ service:
   # Annotations for the service
   annotations: {}
 
+# TLS configuration
+tls:
+  # Enable TLS
+  enabled: false
+  # Require clients to authenticate with a certificate
+  authClients: false
+  # Existing secret containing the certificates
+  existingSecret: ""
+  # Certificate filename in the secret
+  certFilename: "tls.crt"
+  # Key filename in the secret
+  keyFilename: "tls.key"
+  # CA Certificate filename in the secret (leave empty for Let's Encrypt)
+  caCertFilename: ""
+
 # Authentication configuration
 auth:
   # Enable password authentication
