feat: Externalize Redis liveness and readiness probe logic into a dynamic script, supporting TLS and authentication via environment variables.

--- a/charts/redis/templates/configmap-redis.yaml
+++ b/charts/redis/templates/configmap-redis.yaml
@@ -5,6 +5,8 @@ metadata:
   labels:
     {{- include "redis.labels" . | nindent 4 }}
 data:
+  probe.sh: |
+{{- include "redis.probeScript" . | nindent 4 }}
   redis.conf: |
     # Redis configuration file
     
