--- a/charts/redis/templates/statefulset-redis.yaml
+++ b/charts/redis/templates/statefulset-redis.yaml
@@ -1,4 +1,5 @@
 {{- include "redis.validateArchitecture" . -}}
+{{- include "redis.validateTLS" . -}}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
