feat: Add `tls-replication` configuration for Redis sentinel architecture.

--- a/charts/redis/templates/configmap-redis.yaml
+++ b/charts/redis/templates/configmap-redis.yaml
@@ -21,6 +21,9 @@ data:
     tls-ca-cert-file /certs/{{ .Values.tls.caCertFilename }}
     {{- end }}
     tls-auth-clients {{ if .Values.tls.authClients }}yes{{ else }}no{{ end }}
+    {{- if eq .Values.architecture "sentinel" }}
+    tls-replication yes
+    {{- end }}
     {{- else }}
     port {{ .Values.service.port }}
     {{- end }}
