--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -44,6 +44,23 @@ service:
   # NodePort (only if type is NodePort)
   # nodePort: 30000
 
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    # nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
 # Etcd configuration
 etcd:
   # Directory where data is stored
