feat: Implement etcd authentication bootstrapping with configurable RBAC, root user creation, and post-install hooks.

--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -102,7 +102,14 @@ tolerations: []
 
 affinity: {}
 
-# Authentication (Placeholder for future expansion)
+# Authentication
 auth:
   rbac:
-    enabled: false
+    enabled: true
+    # Create root user and enable auth
+    create: true
+    # Root password (default: "etcd-root-password"). Should be overridden in production.
+    rootPassword: "etcd-root-password"
+    # User existing secret for root password
+    existingSecret: ""
+    existingSecretPasswordKey: "password"
