feat: Allow configuration of ETCD snapshot count, election timeout, heartbeat interval, and auto compaction retention in the statefulset.

--- a/charts/etcd/templates/statefulset.yaml
+++ b/charts/etcd/templates/statefulset.yaml
@@ -60,6 +60,14 @@ spec:
               value: "3"
             - name: ETCD_INITIAL_CLUSTER_STATE
               value: {{ .Values.etcd.initialClusterState }}
+            - name: ETCD_SNAPSHOT_COUNT
+              value: {{ .Values.etcd.snapshotCount | quote }}
+            - name: ETCD_ELECTION_TIMEOUT
+              value: {{ .Values.etcd.electionTimeout | quote }}
+            - name: ETCD_HEARTBEAT_INTERVAL
+              value: {{ .Values.etcd.heartbeatInterval | quote }}
+            - name: ETCD_AUTO_COMPACTION_RETENTION
+              value: {{ .Values.etcd.autoCompactionRetention | quote }}
             
             # HA Cluster Construction
             - name: ETCD_INITIAL_CLUSTER
